alignment correction

--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ html,body{
    .navbar-nav li a{
        font-size: 18px!important;
        font-weight: 500!important;
-       margin-left:12rem!important;
+       margin-left:10rem!important;
+       text-decoration: underline;
+       text-decoration-color:#6b278a!important;
    }
    .heading{
        font-family: Verdana,Tahoma, sans-serif;
@@ -34,7 +36,7 @@ html,body{
    }
    .carousel-item{
        position: relative!important;
-       margin-top: 44px;
+       padding-top: 50px;
        z-index: -2!important;
    }
   
@@ -72,8 +74,6 @@ html,body{
     position: relative;
     object-fit: cover;
     margin-top: 10px;
-
-    
 }
 
 .heading{
